test/corpus/expressions.txt
================================================================================
parameters, basically
================================================================================

X[#1234]
X[#<abc>]
X[#<_abc>]

--------------------------------------------------------------------------------

(source_file
  (line
    (value_word
      (expression
        (numbered_parameter))))
  (line
    (value_word
      (expression
        (named_local_parameter))))
  (line
    (value_word
      (expression
        (named_global_parameter)))))

================================================================================
arithmetic
================================================================================

X[1+1] X[1-1] X[2*2] X[2/2] X[2 MOD 2] X[2 mod 2]

--------------------------------------------------------------------------------

(source_file
  (line
    (value_word
      (expression
        (binary_expr
          left: (literal)
          right: (literal))))
    (value_word
      (expression
        (binary_expr
          left: (literal)
          right: (literal))))
    (value_word
      (expression
        (binary_expr
          left: (literal)
          right: (literal))))
    (value_word
      (expression
        (binary_expr
          left: (literal)
          right: (literal))))
    (value_word
      (expression
        (binary_expr
          left: (literal)
          right: (literal))))
    (value_word
      (expression
        (binary_expr
          left: (literal)
          right: (literal))))))

================================================================================
same precedence resolution
================================================================================

X[1 ** 2 ** 3]
X[1 + 2 - 3]
X[1 * 2 / 3 mod 4]
X[1 eq 2 ne 3 gt 4 ge 5 lt 6 le 7]
X[1 and 2 or 3]

--------------------------------------------------------------------------------

(source_file
  (line
    (value_word
      (expression
        (binary_expr
          left: (binary_expr
            left: (literal)
            right: (literal))
          right: (literal)))))
  (line
    (value_word
      (expression
        (binary_expr
          left: (binary_expr
            left: (literal)
            right: (literal))
          right: (literal)))))
  (line
    (value_word
      (expression
        (binary_expr
          left: (binary_expr
            left: (binary_expr
              left: (literal)
              right: (literal))
            right: (literal))
          right: (literal)))))
  (line
    (value_word
      (expression
        (binary_expr
          left: (binary_expr
            left: (binary_expr
              left: (binary_expr
                left: (binary_expr
                  left: (binary_expr
                    left: (literal)
                    right: (literal))
                  right: (literal))
                right: (literal))
              right: (literal))
            right: (literal))
          right: (literal)))))
  (line
    (value_word
      (expression
        (binary_expr
          left: (binary_expr
            left: (literal)
            right: (literal))
          right: (literal))))))

================================================================================
mixed precedence resolution
================================================================================

X[1 + 2 / 5 mod 4 - 2 * 3 ** 4]
X[1 eq 2 and 3 ne 4]

--------------------------------------------------------------------------------

(source_file
  (line
    (value_word
      (expression
        (binary_expr
          left: (binary_expr
            left: (literal)
            right: (binary_expr
              left: (binary_expr
                left: (literal)
                right: (literal))
              right: (literal)))
          right: (binary_expr
            left: (literal)
            right: (binary_expr
              left: (literal)
              right: (literal)))))))
  (line
    (value_word
      (expression
        (binary_expr
          left: (binary_expr
            left: (literal)
            right: (literal))
          right: (binary_expr
            left: (literal)
            right: (literal)))))))

================================================================================
regular looking functions
================================================================================

X[ABS[1]] X[ACOS[2]] X[ASIN[3]] X[COS[4]] X[EXP[5]] X[FIX[6]] X[FUP[7]]
X[ROUND[8]] X[LN[9]] X[SIN[10]] X[SQRT[11]] X[TAN[12]] X[EXISTS[13]]

--------------------------------------------------------------------------------

(source_file
  (line
    (value_word
      (expression
        (func_call_expr
          (expression
            (literal)))))
    (value_word
      (expression
        (func_call_expr
          (expression
            (literal)))))
    (value_word
      (expression
        (func_call_expr
          (expression
            (literal)))))
    (value_word
      (expression
        (func_call_expr
          (expression
            (literal)))))
    (value_word
      (expression
        (func_call_expr
          (expression
            (literal)))))
    (value_word
      (expression
        (func_call_expr
          (expression
            (literal)))))
    (value_word
      (expression
        (func_call_expr
          (expression
            (literal))))))
  (line
    (value_word
      (expression
        (func_call_expr
          (expression
            (literal)))))
    (value_word
      (expression
        (func_call_expr
          (expression
            (literal)))))
    (value_word
      (expression
        (func_call_expr
          (expression
            (literal)))))
    (value_word
      (expression
        (func_call_expr
          (expression
            (literal)))))
    (value_word
      (expression
        (func_call_expr
          (expression
            (literal)))))
    (value_word
      (expression
        (func_call_expr
          (expression
            (literal)))))))

================================================================================
functions applied to expressions
================================================================================

X[ABS[1+2]] X[ABS[ACOS[3]]]

--------------------------------------------------------------------------------

(source_file
  (line
    (value_word
      (expression
        (func_call_expr
          (expression
            (binary_expr
              left: (literal)
              right: (literal))))))
    (value_word
      (expression
        (func_call_expr
          (expression
            (func_call_expr
              (expression
                (literal)))))))))

================================================================================
ATAN
================================================================================

X[ATAN[1]/[2]]
X[ATAN[1/2]/[3/4]]

--------------------------------------------------------------------------------

(source_file
  (line
    (value_word
      (expression
        (atan_call_expr
          (expression
            (literal))
          (expression
            (literal))))))
  (line
    (value_word
      (expression
        (atan_call_expr
          (expression
            (binary_expr
              (literal)
              (literal)))
          (expression
            (binary_expr
              (literal)
              (literal))))))))
